made image fit container and fixed overflow

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,6 @@ body {
 .container{
     background-color: rgb(189, 191, 192);
     padding:16px;
-    outline: auto;
 }
 
 /* .image-description-container {
@@ -30,9 +29,12 @@ body {
 .image-container {
    width: auto;
    height: auto;
+   overflow: hidden;
 }
 
-/* .image-container img{
-    max-width: 100%;
-    height: auto;
-} */
+img{
+    width: 1283px;
+    height: 300px;
+    object-fit: cover;
+}
+
